--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">BaseAndroidApp</string>
+
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="move_detail">move to detail</string>
+    <string name="home_detail">home detail</string>
+    <string name="list_fragment">list fragment</string>
+    <string name="profile_fragment">this is profile fragment</string>
 </resources>
