--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">BaseAndroidApp</string>
+    <string name="app_name">교담표</string>
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="move_detail">move to detail</string>
