--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,11 @@
     <string name="channel_name">channel Name</string>
     <string name="channel_description">channel description</string>
     <string name="default_notification_channel_id">fcm default channel id</string>
+
+
+    <string name="monday">월</string>
+    <string name="tuesday">화</string>
+    <string name="wednesday">수</string>
+    <string name="thursday">목</string>
+    <string name="friday">금</string>
 </resources>
