--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,20 @@
     <string name="wednesday">수</string>
     <string name="thursday">목</string>
     <string name="friday">금</string>
+
+    <string name="gyosi_1">1</string>
+    <string name="gyosi_2">2</string>
+    <string name="gyosi_3">3</string>
+    <string name="gyosi_4">4</string>
+    <string name="gyosi_5">5</string>
+    <string name="gyosi_6">6</string>
+
+
+    <string name="grade_1">1학년</string>
+    <string name="grade_2">2학년</string>
+    <string name="grade_3">3학년</string>
+    <string name="grade_4">4학년</string>
+    <string name="grade_5">5학년</string>
+    <string name="grade_6">6학년</string>
+
 </resources>
