--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,9 @@
     <string name="grade_5">5학년</string>
     <string name="grade_6">6학년</string>
 
+    <string name="save_setting">저장하기</string>
+    <string name="grade_setting_text">반 설정</string>
+    <string name="grade_setting_sub">학년별 반 수를 입력하세요</string>
+    <string name="grade_saved_text">저장하였습니다.</string>
+
 </resources>
