--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,7 +24,8 @@
     <string name="gyosi_5">5</string>
     <string name="gyosi_6">6</string>
 
-
+    <string name="grade">학년</string>
+    <string name="ban">반</string>
     <string name="grade_1">1학년</string>
     <string name="grade_2">2학년</string>
     <string name="grade_3">3학년</string>
